# edge-ai-libraries

./: .gitmodules  CONTRIBUTING.md  README.md
.github/: CODEOWNERS
.github/workflows/: GENAI-model-download.yaml  dlsps-build-scans-pr-workflow.yaml  dlsps-pr-workflow.yaml  dlsps-weekly-cache-images.yaml  documentation-check.yaml  timeseries-scans.yaml  timeseries-weekly-functional-tests.yaml  vippet-pr-workflow.yaml
libraries/robotics-ai-libraries/orb-extractor/: CMakeLists.txt  README-external.md  REUSE.toml  orblze.pc.in  orblzeConfig.cmake.in
libraries/robotics-ai-libraries/orb-extractor/.github/linters/: .clang-format
libraries/robotics-ai-libraries/orb-extractor/cmake/: config.h.in
libraries/robotics-ai-libraries/orb-extractor/humble/debian/: control  orb-extractor-lze-test.install  rules
libraries/robotics-ai-libraries/orb-extractor/include/: config.h  orb_extractor.h  orb_type.h
libraries/robotics-ai-libraries/orb-extractor/jazzy/debian/: control  liborb-lze-dev.install  liborb-lze.install  orb-extractor-lze-test.install  rules  shlibs.local
libraries/robotics-ai-libraries/orb-extractor/samples/: CMakeLists.txt  cmd_parser.h  main.cpp  tutorial.md
libraries/robotics-ai-libraries/orb-extractor/src/: orb_extractor.cpp  orb_extractor_impl.h  orb_extractor_node.h  orb_point_pairs.h
libraries/robotics-ai-libraries/orb-extractor/src/gpu/: fast.h  gaussian.cpp  gaussian.h  gpu_kernels.cpp  gpu_kernels.h  orb.h  orb_descriptor.cpp  orb_descriptor.h  resize.cpp  resize.h
libraries/robotics-ai-libraries/orb-extractor/src/sycl_utils/: CMakeLists.txt
libraries/robotics-ai-libraries/orb-extractor/src/sycl_utils/include/: device_array.h  device_array.hpp  device_impl.h  device_memory.h
libraries/robotics-ai-libraries/orb-extractor/src/sycl_utils/src/: device_impl.cpp  device_memory.hpp  device_pointer.cpp  gpu_memory_manager.h
libraries/robotics-ai-libraries/orb-extractor/tests/: CMakeLists.txt
libraries/robotics-ai-libraries/orb-extractor/tests/fuzzer/: CMakeLists.txt  fuzzer_opencv_free.cpp  fuzzer_stereo.cpp  simple_fuzzer_opencv.cpp  simple_fuzzer_opencv_free.cpp
libraries/robotics-ai-libraries/orb-extractor/tests/src/: FastTest.cpp  GaussianTest.cpp  ImagemaskTest.cpp  MulticameraTest.cpp  MultithreadTest.cpp  OpencvfreeTest.cpp  OrbDescriptorTest.cpp  RectmaskTest.cpp  ResizeTest.cpp  StereoTest.cpp  TestUtil.h
libraries/video-chunking-utils/: .gitignore  setup.py
libraries/video-chunking-utils/tests/: pytest-note.md  test_base_chunking.py  test_data_chunk.py  test_pelt_chunking.py  test_uniform_chunking.py
libraries/video-chunking-utils/video_chunking/: uniform_chunk.py
microservices/alert-service/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
microservices/alert-service/config/: config.yaml
microservices/alert-service/docker/: Dockerfile  docker-compose.yml
microservices/alert-service/docs/: configure.md  get-started.md  overview-and-architecture.md
microservices/alert-service/src/: main.py
microservices/alert-service/tests/: test_api.py  test_config.py  test_dedup.py  test_delivery.py  test_models.py  test_worker.py
microservices/audio-analyzer/: .env.example  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
microservices/dlstreamer-pipeline-server/: .yamllint  Dockerfile  Makefile  README-dockerhub.md  README.md  document-versions.yaml  sources.Dockerfile  unittests.Dockerfile
microservices/model-download/: .gitignore  README.md
microservices/model-registry/: README.md  requirements.txt
microservices/multilevel-video-understanding/: .dockerignore  README.md  pyproject.toml
microservices/multimodal-embedding-serving/: README.md  pyproject.toml  setup.sh
microservices/semantic-comparison-service/: .env.example  .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  requirements.txt
microservices/semantic-search-agent/: .env.example  pyproject.toml  verify.py
microservices/text-to-speech/: .env  .env.example  Dockerfile  README.md  config.yaml  docker-compose.yml  requirements.txt
microservices/time-series-analytics/: CHANGELOG.md  Dockerfile  README-dockerhub.md  README.md  requirements.txt  third-party-programs.txt
microservices/vlm-openvino-serving/: pyproject.toml  setup.sh
microservices/vlm-openvino-serving/docker/: Dockerfile  compose.yaml
microservices/vlm-openvino-serving/docs/user-guide/: Overview.md  environment-variables.md  get-started.md  system-requirements.md
microservices/vlm-openvino-serving/scripts/: compress_model.sh
microservices/vlm-openvino-serving/src/: app.py
microservices/vlm-openvino-serving/src/config/: model_config.yaml
microservices/vlm-openvino-serving/src/utils/: common.py  data_models.py  telemetry.py  telemetry_store.py  utils.py
microservices/vlm-openvino-serving/tests/: test_app.py  test_utils.py
sample-applications/chat-question-and-answer/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.sh
sample-applications/chat-question-and-answer-core/: Makefile  README.md  pyproject.toml
sample-applications/document-summarization/: Dockerfile  Makefile  pyproject.toml  setup.sh
sample-applications/video-search-and-summarization/: .gitignore  Makefile  README.md  build.sh  setup.sh
sample-applications/video-search-and-summarization/mcp/: Dockerfile  README.md  pyproject.toml
sample-applications/video-search-and-summarization/search-ms/: pyproject.toml  server.py
sample-applications/video-search-and-summarization/search-ms/src/utils/: time_filters.py
sample-applications/video-search-and-summarization/search-ms/src/vdms_retriever/: retriever.py
tools/genai-applications-sizing/: .gitignore  Dockerfile  README.md  profile-runner.py  requirements.txt  third_party_programs.txt
tools/npu-monitor-tool/: README.md  npu-monitor-tool.py
tools/visual-pipeline-and-platform-evaluation-tool/: .gitignore  .trivyignore.yaml  Makefile  README.md  compose.yml  generate_openapi.py  pyrightconfig.json  rights-licences.md  setup_env.sh
(+905 files in other folders)
