# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "vlm-openvino-serving"
version = "0.1.0"
description = "FastAPI server wrapping OpenVINO runtime to serve `/chat/completion` endpoint to consume multimodal image input/video input and serve inference with VLM models."
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.14"
torch = { version = "==2.8.0", source = "pytorch-cpu" }
torchvision = { version = "==0.23.0", source = "pytorch-cpu" }
fastapi = "^0.124.2"
fastapi-utils = "^0.8.0"
typing-inspect = "^0.9.0"
uvicorn = "^0.38.0"
gunicorn = "^23.0.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
aiohttp = "^3.13.3"
nncf = "^2.18.0"
transformers = "4.53.3"
pillow = "^12.1.1"
openvino = "^2025.4.0"
openvino-tokenizers = "^2025.4.0.0"
openvino-genai = "^2025.4.0.0"
optimum-intel = "^1.26.1"
qwen_vl_utils = "^0.0.14"
num2words = "^0.5.14"
urllib3 = "^2.6.3"
protobuf = "^6.33.5"
filelock = "^3.20.3"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
coverage = "^7.13.0"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

