
[tool.poetry]
name = "video-search"
version = "0.1.0"
description = "Video Search Microservice"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
fastapi = "^0.136.1"
uvicorn = "^0.47.0"
gunicorn = "^26.0.0"
langchain-community = "0.4.1"
langchain-core = "^1.4.0"
langchain-vdms = "^0.2.0"
langsmith = "^0.8.5"
watchdog = "6.0.0"
requests = "^2.34.2"
dateparser = "^1.4.0"
tzlocal = "^5.3.1"
word2number = "^1.1"
urllib3 = "^2.7.0"
aiohttp = "^3.13.5"
marshmallow = "^3.26.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"